overflow fix

--- a/assets/styles/standard.css
+++ b/assets/styles/standard.css
@@ -1,9 +1,14 @@
-body, html, ul {
+body,
+html,
+ul {
+  margin: 0;
+  padding: 0;
+}
+body,
+html {
   overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  margin: 0;
-  padding: 0;
 }
 
 * {
@@ -22,7 +27,11 @@ ul li {
   width: 33.33%;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   margin: 0;
   /*  padding: 0; */
   text-transform: uppercase;
